# speed

./: pyproject.toml  sport.py
src/speed/: client.py  client2.py  main.py  main_2.py  server.py
